fix: Responsiveness der großen Karte verbessert. Die Stärken und Schwächen können nun nicht mehr overflowen.

--- a/css/base.css
+++ b/css/base.css
@@ -74,6 +74,10 @@ button {
 	cursor: pointer;
 }
 
+img {
+	max-width: 100%;
+}
+
 button {
 	transition: scale 75ms;
 }
