--- a/css/style.css
+++ b/css/style.css
@@ -389,12 +389,14 @@ input {
 }
 
 .strengths-weaknesses {
-	padding: 1em;
+	overflow-y: auto;
+	height: 100%;
+	padding-inline: 1em;
 	width: 100%;
 	padding-block: 0.5em;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-evenly;
 	align-items: end;
 	row-gap: 0.5em;
 	border-radius: 20px;
@@ -404,23 +406,35 @@ input {
 }
 
 .interaction {
+	flex: 1;
 	padding-block: 0.25em;
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
-	border-bottom: 0.5px solid black;
+	align-items: start;
+}
+
+.divider {
+	flex-shrink: 0;
+	width: 100%;
+	height: 0.5px;
+	background-color: black;
 }
 
 .interaction-img-container {
+	height: 100%;
+	width: 50%;
 	display: flex;
 	align-items: center;
+	justify-content: end;
 	column-gap: 0.25em;
+	row-gap: 0.25em;
+	flex-wrap: wrap;
 }
 
 .interaction-img-container img {
-	width: 24px;
-	aspect-ratio: 1;
+	flex: 0 1 24px;
+	min-width: 10px;
 	filter: drop-shadow(0px 0px 1px var(--color-black-darker));
 }
 
